k8s/base/auth/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth
spec:
  podSelector:
    matchLabels:
      app: auth
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
      ports:
        - port: 8001
  egress:
    - ports:
        - port: 5432  # postgres-auth
        - port: 6379  # redis
        - port: 53
      protocol: UDP
    - ports:
        - port: 53
      protocol: UDP
